<resources>
    <string name="app_name">Fall2019</string>
    <string name="action_settings">Settings</string>
    <string name="hello_message">Hello World!</string>
    <string name="textview">Look at my GUI</string>
    <string name="checkbox">Check this out!</string>
    <string name="swith">Switch On/Off</string>
    <string name="button1">Click here</string>
    <string name="edit_text">Type here</string>
    <string name="input_type">textPersonalName</string>
    <string name="text_form1">Enter your email address: </string>
    <string name="text_form2">Type your password </string>
    <string name="edit_form1">Type email here </string>
    <string name="button_form"> Login </string>
    <string name="text_form21"> Your profile </string>
    <string name="text_form22"> Your name </string>
    <string name="text_form23"> Enter your email </string>
    <string name="text_form24"> Your picture </string>
    <string name="text_form25"> Click the button above to take a picture </string>
    <string name="send_test"> Send </string>
    <string name="rec_test"> Receive </string>
    <string name="go_chat"> Go to chat </string>


</resources>
