<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <TextView android:id="@+id/text1"
        android:text="@string/textview"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />

    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:orientation="horizontal"
        />

    <CheckBox android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/checkbox"
        android:orientation="horizontal"
        />

    <ImageButton
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swith"
        android:gravity="fill"
        android:orientation="horizontal"
        />

    <EditText android:id="@+id/text2"
        android:hint="@string/edit_text"
        android:inputType="@string/input_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />

</LinearLayout>