<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView android:id="@+id/text1"
        android:text="@string/textview"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        />

    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/button1"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text1"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/checkbox"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text1"
        />

    <ImageButton
        android:id="@+id/img"
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/button1"
        />

    <Switch
        android:id="@+id/swith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swith"
        android:layout_below="@id/checkbox"
        android:layout_alignParentRight="true"
        />

    <EditText android:id="@+id/text2"
        android:hint="@string/edit_text"
        android:inputType="@string/input_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/img"
        />

</RelativeLayout>