<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <TextView android:id="@+id/text_form1"
        android:text="@string/text_form1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edit_form1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:hint="@string/edit_form1"
        android:inputType="textEmailAddress" />
    <TextView android:id="@+id/text_form2"
        android:text="@string/text_form2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText android:id="@+id/edit_form2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button android:id="@+id/button_form"
        android:text="@string/button_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>