<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <TextView android:id="@+id/text_form21"
        android:text="@string/text_form21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:id="@+id/text_form22"
        android:text="@string/text_form22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText android:id="@+id/edit_form21"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:id="@+id/text_form23"
        android:text="@string/text_form23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText android:id="@+id/edit_form22"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:id="@+id/text_form24"
        android:text="@string/text_form24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageButton android:id="@+id/button_form2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        />

    <TextView android:id="@+id/text_form25"
        android:text="@string/text_form25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>